--- a/ajax/movie1_jquery.html
+++ b/ajax/movie1_jquery.html
@@ -68,6 +68,7 @@
         <div class="box3"></div>
       </div>
     </form>
+    <script src="../jquery/jquery-3.6.0.min.js"></script>
     <script>
       function init() {
         //오늘 날짜
@@ -77,7 +78,7 @@
         let day = newDate.getDate() - 1; //전일 일자
 
         //구한 년월일 화면에 보여주기
-        document.querySelector("#txtYear").value = year;
+        $("#txtYear").val(year);
 
         if (month < 10) {
           month = "0" + month;
@@ -85,8 +86,8 @@
         if (day < 10) {
           day = "0" + day;
         }
-        document.querySelector("#selMon").value = month;
-        document.querySelector("#selDay").value = day;
+        $("#selMon").val(month);
+        $("#selDay").val(day);
       }
 
       //영화 상세정보 출력
@@ -95,57 +96,69 @@
           "http://www.kobis.or.kr/kobisopenapi/webservice/rest/movie/searchMovieInfo.json?key=f5eef3421c602c6cb7ea224104795888&movieCd=";
         url += movieCd;
         console.log(url);
-        fetch(url)
-          .then((response) => {
-            return response.json();
-          })
-          .then((data) => {
-            console.log(data);
+
+        $.getJSON({
+          url: url,
+          success: function (data) {
             //원하는 정보만 추출하기 - 영화제목, 영어제목, 상영시간, 감독, 출연배우
-            let a =
-              "movieNm :" + data.movieInfoResult.movieInfo.movieNm + "</br>";
-            a +=
-              "movieNmEn : " +
-              data.movieInfoResult.movieInfo.movieNmEn +
-              "</br>";
-            a += "showTm : " + data.movieInfoResult.movieInfo.showTm + "</br>";
 
-            data.movieInfoResult.movieInfo.directors.forEach((element) => {
-              a += "peopleNm : " + element.peopleNm + "</br>";
-              a += "peopleNmEn : " + element.peopleNmEn + "</br>";
+            let movieInfo = data.movieInfoResult.movieInfo;
+
+            let str = "";
+            //영화제목
+            str += "영화제목 : " + movieInfo.movieNm + "</br>";
+            //영어제목
+            str += "영어제목 : " + movieInfo.movieNmEn + "</br>";
+            //상영시간
+            str += "상영시간 : " + movieInfo.showTm + "</br>";
+            //감독
+            if (movieInfo.directors[0] != null) {
+              str += "감독 : " + movieInfo.directors[0].peopleNm + "</br>";
+            } else {
+              str += "감독 : " + "</br>";
+            }
+            //출연배우
+            //출연배우 인원수
+            let length = movieInfo.actors.length;
+
+            let peopleNm = "";
+            $(movieInfo.actors).each(function (idx, element) {
+              if (idx == length - 1) {
+                peopleNm += element.peopleNm;
+              } else {
+                peopleNm += element.peopleNm + ", ";
+              }
             });
+            str += " 출연배우 : " + peopleNm;
 
-            data.movieInfoResult.movieInfo.actors.forEach((element) => {
-              a += "peopleNm : " + element.peopleNm + "</br>";
-              a += "peopleNmEn : " + element.peopleNmEn + "</br>";
-              a += "cast : " + element.cast + "</br>";
-              a += "castEn : " + element.castEn + "</br>";
-            });
+            //추출한 내용을 보여주기
+            $(".box3").html(str);
+          },
+        });
+      } //function show() 종료
 
-            document.querySelector(".box3").innerHTML = a;
-            document.querySelector("[class='box3']").innerHTML = a;
-          });
-      }
-      function getMovieInfo() {
-        let year = document.querySelector("#txtYear").value;
-        let month = document.querySelector("#selMon").value;
-        let day = document.querySelector("#selDay").value;
+      $(":button").click(function () {
+        let year = $("#txtYear").val();
+        let month = $("#selMon").val();
+        let day = $("#selDay").val();
+
         let url =
           "http://kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?key=f5eef3421c602c6cb7ea224104795888&targetDt=";
         url += year + month + day;
 
         console.log(url);
 
-        fetch(url)
-          .then((response) => {
-            return response.json();
-          })
-          .then((data) => {
+        $.getJSON({
+          url: url,
+          success: function (data) {
             //도착한 json을 원하는 형태로 작성
             console.log(data);
 
             let str = "";
-            data.boxOfficeResult.dailyBoxOfficeList.forEach((element) => {
+            $(data.boxOfficeResult.dailyBoxOfficeList).each(function (
+              idx,
+              element
+            ) {
               //값 출력 되는지 확인
               //   console.log(elemnt.rank);
               //   console.log(elemnt.rankInten);
@@ -169,17 +182,10 @@
               //영화명
               str = str + element.movieNm + "</a></br>";
             });
-            document.querySelector("#msg").innerHTML = str;
-          })
-          .catch((error) => {
-            console.log("에러");
-          });
-      }
-      //확인버튼 가져오기
-      //이벤트 연결
-      document
-        .querySelector("[type = 'button']")
-        .addEventListener("click", getMovieInfo);
+            $("#msg").html(str);
+          },
+        });
+      });
       init();
     </script>
   </body>
